# bybit-cli

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  KRAKEN_COMPAT.md  LICENSE  PROMPT EXAMPLE.md  README.md  SECURESDLC.md  SECURITY.md  TESTING_TODO.md  dist-workspace.toml  gemini-extension.json  install.ps1  install.sh  llms.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml  securesdlc.yml
agents/: README.md  error-catalog.json  mcp-tool-catalog.json  tool-catalog.json
agents/examples/: README.md  batch-limit-ladder.sh  breakout-detector.sh  close-all-positions.sh  conditional-order.sh  dca-buy.sh  dead-mans-switch.sh  earn-brief.sh  earn-cycle.sh  journal-capture.sh  market-regime-monitor.sh  morning-brief.sh  options-covered-call-finder.sh  options-greeks-risk-report.sh  options-iv-skew-monitor.sh  options-opportunity-scanner.sh  options-protective-put.sh  options-strategy-advisor.sh  paper-session.sh  price-level-alert.sh  risk-guardian.sh  risk-snapshot.sh  signal-watch.sh  trade-plan-builder.sh
docker/: README.md
docker/mcp/: Dockerfile  compose.yaml
examples/: command_inventory.rs  mcp_tool_catalog.rs
skills/: INDEX.md  README.md
skills/account-snapshot/: SKILL.md
src/: auth.rs  client.rs  command_inventory.rs  config.rs  errors.rs  futures_paper.rs  lib.rs  main.rs  paper.rs  shell.rs  telemetry.rs
src/mcp/: mod.rs  (+3 more)
tests/: clap_factory.rs  cli.rs  cli_command_coverage.rs  doc_sync.rs  live_smoke.rs  mcp_catalog_sync.rs
(+71 files in other folders)
