[package]
name = "bybit-cli"
version = "0.1.0"
edition = "2021"
description = "Bybit CLI — trade, query, and manage your Bybit account from the terminal"
license = "MIT"
repository = "https://github.com/kdkiss/bybit-cli"

[[bin]]
name = "bybit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
anyhow = "1"
thiserror = "2"
dirs = "6"
comfy-table = "7"
dialoguer = "0.12"
rustyline = "14"
rustyline-derive = "0.10"
shell-words = "1"
colored = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
rmcp = { version = "1.1", default-features = false, features = ["server", "transport-io"] }

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.dist]
inherits = "release"
lto = "thin"
